# Graphics-Renderer

./: .gitignore  CMakeLists.txt  README.md
OpenGL/: CMakeLists.txt  fragmentShader_perFrag.glsl  glfwExample.cpp  vertexShader_perFrag.glsl
renderLib/: BVHNode.h  BlinnPhongShader.h  BoundingBox.h  CMakeLists.txt  Camera.h  DiffuseShader.h  EmitterShader.h  Framebuffer.cpp  Framebuffer.h  GlassShader.h  HitRecord.h  ISceneLoader.h  LambertianShader.h  MirrorShader.h  PerspectiveCamera.h  Ray.h  Scene.h  SceneLoader.h  SceneParser_JSON.cpp  Shader.h  Shape.h  Sphere.h  Triangle.h  TriangleMesh.h  hit_record.h  vec3.h
src/: CMakeLists.txt  main.cpp
utests/: CMakeLists.txt  ray_test.cpp  sphere_test.cpp  vec3_test.cpp
